# quickCmake

./: CMakeLists.txt
src/: main.cpp
sylar/: config.cpp  config.h  log.cpp  log.h  main.cpp  singleton.h  sylar.h  thread.cpp  thread.h  util.cpp  util.h
tests/: log.txt  test.cpp  test_config.cpp  test_thread.cpp
